--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -68,6 +68,8 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
               <a class="dropdown-item" href="/receive/clientes-pendentes/">Consultar</a>
+              <a class="dropdown-item" href="/recieve/payment">Cadastrar</a>
+              <a class="dropdown-item" href="/receive/searchreceive">Buscar</a>
             </div>
           </li>
           <li class="nav-item dropdown">
