--- a/sale/templates/sales/pages/searchsales.html
+++ b/sale/templates/sales/pages/searchsales.html
@@ -58,7 +58,7 @@
               <a href="/sale/gerar-pdf/{{ venda.num_sale }}">
                 <img class="icons" src="{% static '/budget/img/download.png' %}" alt="Download">
               </a>
-              <a class="view-report" href="/budget/{{ venda.number_budget }}/info">
+              <a class="view-report" href="/sale/info/{{venda.num_sale}}">
                 <img class="icons" src="{% static 'budget/img/view.png' %}" alt="Visualizar">
               </a>
               
