--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -101,6 +101,18 @@
               
             </div>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Usuarios
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/criar-usuario/">Criar</a>
+              <a class="dropdown-item" href="/usuarios/">Consultar</a>
+            </div>
+          </li>
+          <li>
+            <a href="/logout/">Sair</a>
+          </li>
       </ul>
     </div>
   </nav>
