--- a/budget/templates/budget/pages/orcamento_pdf.html
+++ b/budget/templates/budget/pages/orcamento_pdf.html
@@ -69,6 +69,9 @@
       text-align: center;
       z-index: 1000;
     }
+    main{
+      margin-top: 100px;
+    }
 
     .content {
       padding-top: 60px;
