--- a/budget/templates/budget/pages/search_budget.html
+++ b/budget/templates/budget/pages/search_budget.html
@@ -75,6 +75,8 @@
       <br>
       <a href="/budget/exportar/orcamentos">
         <button class="enviar" type="submit">Gerar Relatório</button>
+        <button class="enviar-impressora" type="submit">Impressora</button>
+        
       </a>
     </div>
   </main>
@@ -95,6 +97,9 @@
       color: white;
       text-align: center;
       z-index: 1000;
+    }
+    main{
+      margin-top: 100px;
     }
 
     .content {
