--- a/budget/templates/budget/pages/info_budget.html
+++ b/budget/templates/budget/pages/info_budget.html
@@ -91,8 +91,10 @@
       text-align: center;
       z-index: 1000;
     }
+    
 
     .content {
+      margin-top:100px;
       padding-top: 80px;
       width: 85%;
       margin: auto;
