--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -206,6 +206,9 @@
       text-align: center;
       z-index: 1000;
   }
+  main{
+    margin-top: 100px;
+  }
     .content {
       padding-top: 60px; /* Adiciona um espaço superior para evitar que o conteúdo fique atrás do cabeçalho */
       width: 85vw; /* Largura do conteúdo */
